feat: Use include

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -40,12 +40,12 @@
             <div class="text-sm text-gray-500 dark:text-gray-400 mt-1">
               {{ user.global_name|default(user.username) }}
             </div>
-            <!-- <a
-                href="upload.html"
+            <a
+                href="/logout"
                 class="mt-2 inline-block px-4 py-1.5 bg-pure-black dark:bg-pure-white text-pure-white dark:text-pure-black rounded-md hover:bg-gray-700 dark:hover:bg-gray-300 transition"
               >
-                Upload
-              </a> -->
+                Logout
+              </a>
           </div>
         </div>
       </div>
