--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-{% include 'head.html' ignore missing %}
+  {% include 'head.html' ignore missing %}
 </head>
 
 <body
@@ -10,57 +10,9 @@
   <!-- Header Section -->
   <header
     class="fixed top-0 left-0 w-full h-16 bg-gray-light dark:bg-gray-dark flex items-center justify-end px-4 shadow-md z-50">
-    <button id="theme-toggle"
-      class="p-2 rounded-full bg-gray-200  dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500 transition mr-4">
-      <svg id="sun-icon" class="w-6 h-6 hidden dark:block" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
-        </path>
-      </svg>
-      <svg id="moon-icon" class="w-6 h-6 block dark:hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
-      </svg>
-    </button>
+    {% include 'darkmode.html' ignore missing %}
+    {% include 'oauth.html' ignore missing %}
 
-    <div id="auth-section">
-      {% if user %}
-      <!-- OAuth2 Success: Show user avatar and details -->
-      <div class="avatar-container">
-        <img id="user-avatar" class="avatar border-pure-black dark:border-gray-500" alt="User Avatar"
-          src="https://cdn.discordapp.com/avatars/{{ user.id }}/{{ user.avatar }}.png" />
-        <div class="user-card bg-pure-white dark:bg-gray-dark">
-          <div class="h-14" style="background: {{ user.banner_color|default('#8033cd') }}"></div>
-          <img id="user-avatar-card" class="avatar" alt="User Avatar"
-            src="https://cdn.discordapp.com/avatars/{{ user.id }}/{{ user.avatar }}.png" />
-          <div class="mt-[30px] px-2.5 pb-2.5 text-center font-[Helvetica,sans-serif]">
-            <div class="text-xl font-bold">{{ user.username }}</div>
-            <div class="text-sm text-gray-500 dark:text-gray-400 mt-1">
-              {{ user.global_name|default(user.username) }}
-            </div>
-            <a
-                href="/logout"
-                class="mt-2 inline-block px-4 py-1.5 bg-pure-black dark:bg-pure-white text-pure-white dark:text-pure-black rounded-md hover:bg-gray-700 dark:hover:bg-gray-300 transition"
-              >
-                Logout
-              </a>
-          </div>
-        </div>
-      </div>
-      {% else %}
-      <!-- OAuth2 Failure or Not Logged In: Show login button -->
-      <a id="discord-login" href="/authenticate"
-        class="flex items-center px-3 py-1.5 bg-[#5865F2] text-white rounded-md hover:bg-[#4752C4] transition">
-        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.077.077 0 0 0-.032.027C.533 9.045-.32 13.579.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.677 14.677 0 0 0 1.226-1.992.077.077 0 0 0-.042-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 0-.08.028 9.197 9.197 0 0 0-.398.48.077.077 0 0 0-.01.09c.678.773 1.447 1.465 2.312 2.03a.077.077 0 0 0 .078.01c.618-.235 1.22-.48 1.807-.7a.077.077 0 0 0 .045-.071 16.6 16.6 0 0 0 1.226-1.994.077.077 0 0 0-.042-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 0-.08.028 9.197 9.197 0 0 0-.398.48.077.077 0 0 0-.01.09c.678.773 1.447 1.465 2.312 2.03a.077.077 0 0 0 .078.01c.618-.235 1.22-.48 1.807-.7a.077.077 0 0 0 .045-.071c.429-.828.873-1.674 1.226-1.994a.077.077 0 0 0-.042-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 0-.08.028 9.197 9.197 0 0 0-.398.48.077.077 0 0 0-.01.09c.678.773 1.447 1.465 2.312 2.03a.077.077 0 0 0 .078.01c2.06-.785 4.14-1.964 5.993-3.03a.082.082 0 0 0 .031-.057c.42-4.478-.433-9.012-3.513-13.688a.077.077 0 0 0-.032-.027zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.957-2.419 2.157-2.419 1.21 0 2.176 1.095 2.157 2.419 0 1.333-.956 2.419-2.157 2.419zm7.974 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.957-2.419 2.157-2.419 1.21 0 2.176 1.095 2.157 2.419 0 1.333-.946 2.419-2.157 2.419z" />
-        </svg>
-        Login
-      </a>
-      {% endif %}
-    </div>
   </header>
 
   <!-- Hero Section -->
@@ -101,7 +53,7 @@
   </div>
 
   <!-- Footer Section -->
-{% include 'footer.html' ignore missing %}
+  {% include 'footer.html' ignore missing %}
 
   <script src="./static/js/dark_mode.js"></script>
 </body>
