--- a/static/templates/darkmode.html
+++ b/static/templates/darkmode.html
@@ -1,10 +1,11 @@
 <button
   id="theme-toggle"
-  class="p-2 rounded-full bg-gray-200 dark:bg-gray-600 hover:bg-gray-400 dark:hover:bg-gray-500 transition mr-4"
+  class="p-2 rounded-full bg-gray-200 dark:bg-discord-darker hover:bg-gray-300 dark:hover:bg-gray-700 transition-colors duration-300"
+  aria-label="Toggle dark mode"
 >
   <svg
     id="sun-icon"
-    class="w-6 h-6 hidden dark:block"
+    class="w-5 h-5 hidden dark:block text-yellow-400"
     fill="none"
     stroke="currentColor"
     viewBox="0 0 24 24"
@@ -19,7 +20,7 @@
   </svg>
   <svg
     id="moon-icon"
-    class="w-6 h-6 block dark:hidden"
+    class="w-5 h-5 block dark:hidden text-gray-700"
     fill="none"
     stroke="currentColor"
     viewBox="0 0 24 24"
