--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -40,9 +40,9 @@
   <div id="mobile-menu" class="fixed top-16 left-0 w-full bg-white dark:bg-discord-darker shadow-md z-40 hidden">
     <div class="flex flex-col p-4 space-y-4">
       <a href="/" class="font-medium hover:text-discord-accent transition-colors">Home</a>
-      <a href="/ingest" class="font-medium hover:text-discord-accent transition-colors">Data Ingestion</a>
       <a href="#commands" class="font-medium hover:text-discord-accent transition-colors">Commands</a>
       <a href="#features" class="font-medium hover:text-discord-accent transition-colors">Features</a>
+      <a href="/upload" class="font-medium hover:text-discord-accent transition-colors">Knowledge Base</a>
     </div>
   </div>
 
